--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
+
+#title_header {
+    position: sticky;
+    top: 0;
+    text-align: center;
+    background-color: #8888cc;
+    z-index: 1;
+    padding: 5% 0;
+}
+
+
 #map {
     height: 100%;
     width: 100%;
