--- a/style.css
+++ b/style.css
@@ -1,29 +1,68 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 
+body{
+    background-color: #1c7293;
+}
 #title_header {
     position: sticky;
     top: 0;
     text-align: center;
-    background-color: #8888cc;
+    background-color: #1c7293;
     z-index: 1;
-    padding: 5% 0;
+    margin: 5% 0 ;
+    color: white;
 }
 
+
+
+
+#column_left {
+    padding-top: 5%;
+    padding-right: 5%;
+    background-color: #eeeeee;
+    padding-top: 10%;
+}
+
+#column_right{
+    padding-top: 5%;
+    background-color: #f0f8ff;
+}
+
+#column_right header{
+    background-color: #dddddd;
+    padding: 5%;
+    margin: 5%;
+    width: 80%;
+}
+article {
+    padding: 5%;
+    background-color: #cccccc;
+    margin: 5%;
+    text-align: center;
+    width: 80%;
+}
+
+.form_article{
+    height: 20%;
+}
+
+.map_article{
+    height: 50%;
+}
+
+.row .search{
+    margin: 0 2%;
+}
+
+header .row{
+    text-align: right;
+}
 
 #map {
-    height: 100%;
+    min-height: 300px;
     width: 100%;
+    margin-bottom: 10px;
 }
 /* Optional: Makes the sample page fill the window. */
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
 
-#map_article {
-    height: 300px;
-    width: 300px;
-}
