added animation to the rotation of the video

--- a/style.css
+++ b/style.css
@@ -68,4 +68,9 @@ header .row{
 }
 /* Optional: Makes the sample page fill the window. */
 
-
+#video1 {
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
