--- a/style.css
+++ b/style.css
@@ -43,16 +43,6 @@ article {
     width: 80%;
 }
 
-.form_article{
-    height: 20%;
-}
-
-.map_article{
-    height: 50%;
-}
-
-
-
 .row .search{
     margin: 0 2%;
 }
@@ -73,4 +63,9 @@ header .row{
     -moz-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+}
+
+#video_bubble {
+    border-radius: 50%;
+    object-fit: cover;
 }
