error img with alt resolved

--- a/style.css
+++ b/style.css
@@ -221,3 +221,13 @@ video {
     max-width: 100%;
     height: auto;
 }
+
+canvas {
+    max-width: 100%;
+    height: auto;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
