--- a/style.css
+++ b/style.css
@@ -230,3 +230,12 @@ canvas {
     transition: all 0.5s ease-in-out;
 }
 
+/*mobile version*/
+@media (min-width:480px) and (max-width: 780px) {
+    #left-bar{float:none}
+    #right-bar{display:none}
+}
+@media (min-width:781px) and (max-width: 979px) {
+    #left-bar{float:none}
+    #right-bar{display:none}
+}
