--- a/style.css
+++ b/style.css
@@ -61,11 +61,13 @@ html, body {
 #activity {
     margin-top: 30%;
 }
+
 .pics {
     width: 10%;
     vertical-align: middle;
     margin-right: 3%;
 }
+
 #news {
     width: 12%;
     vertical-align: middle;
@@ -103,7 +105,7 @@ html, body {
     margin-top: 20%;
 }
 
-#more {
+.more {
     margin-top: 20%;
     margin-left: auto;
     margin-right: 18%;
@@ -115,7 +117,6 @@ html, body {
 }
 #MidBar {
     width: 70%;
-    height: 120%;
     background-color: azure;
     color: darkslategrey;
     margin: auto;
@@ -139,6 +140,7 @@ html, body {
     margin-right: auto;
     height: 250px;
     max-width: 100%;
+    color: black;
 }
 
 article {
@@ -230,12 +232,33 @@ canvas {
     transition: all 0.5s ease-in-out;
 }
 
-/*mobile version*/
-@media (min-width:480px) and (max-width: 780px) {
-    #left-bar{float:none}
-    #right-bar{display:none}
+@media only screen and (max-width: 1000px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+    #LeftBar {
+        width: 100%;
+        position: static;
+        min-height: 100%;
+        float: none;
+    }
+
+    #RightBar {
+        position:static;
+        height: auto;
+        width: 100%;
+        float: none;
+    }
+
+    #MidBar {
+        width: 100%;
+        position: static;
+        float: none;
+    }
+
+    article {
+        width: 80%;
+    }
 }
-@media (min-width:781px) and (max-width: 979px) {
-    #left-bar{float:none}
-    #right-bar{display:none}
-}
+
